loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:2: error: '<-' expected but integer literal found.
  for (compte 1 to 8)
              ^LoopCourse:14: error: illegal start of simple expression
}
^